2005-04-23  Derek Scherger  <derek@echologic.com>

	* commands.cc (calculate_base_revision): rename to ...
	(get_base_revision): ... this, since it's not calculating anything
	(calculate_base_manifest): rename to ...
	(get_base_manifest): ... this, and call get_base_revision
	(calculate_restricted_revision): call get_base_revision and remove
	missing files stuff
	(add):
	(drop):
	(rename):
	(attr): call get_base_manifest
	(ls_missing): 
	(revert): call get_base_revision
	* manifest.{cc,hh} (build_restricted_manifest_map): don't return
	missing files and don't produce invalid manifests; do report on
	all missing files before failing
	
2005-04-23  Derek Scherger  <derek@echologic.com>

	* app_state.cc:
	* database.cc:
	* file_io.{cc, hh}: fix bad merge

2005-04-23  Nathaniel Smith  <njs@codesourcery.com>

	* database.cc (put_key): Check for existence of keys with
	conflicting key ids, give more informative message than former SQL
	constraint error.

2005-04-23  Nathaniel Smith  <njs@codesourcery.com>

	* transforms.cc (filesystem_is_ascii_extension_impl): Add EUC to
	the list of ascii-extending encodings.

	* tests/t_multiple_heads_msg.at: Make more robust, add tests for
	branching.

2005-04-23  Nathaniel Smith  <njs@codesourcery.com>

	* app_state.cc (restriction_includes): Remove some L()'s that were
	taking 5-6% of time in large tree diff.

2005-04-23  Nathaniel Smith  <njs@codesourcery.com>

	* file_io.{cc,hh} (localized): Move from here...
	* transforms.{cc,hh} (localized): ...to here.  Add lots of gunk to
	avoid calling iconv whenever possible.

2005-04-22  Nathaniel Smith  <njs@codesourcery.com>

	* manifest.cc (build_restricted_manifest_map): Fixup after merge
	-- use file_exists instead of fs::exists.

2005-04-22  Derek Scherger  <derek@echologic.com>

	* manifest.{cc,hh} (build_restricted_manifest_map): keep and
	return a set of missing files rather than failing on first missing
	file
	* commands.cc (calculate_restricted_revision): handle set of